href adjustment login.html

--- a/Front-end/login.html
+++ b/Front-end/login.html
@@ -26,7 +26,7 @@
       <button type="submit" id="access" onclick="Acessar()">Acessar</button>
       <div id="register-container">
           <label>Ainda não tem uma conta?</label>
-          <a href="#">Registrar</a>
+          <a href="data.html">Registrar</a>
       </div>
     </form>
   </div>
